--- a/SimKer/Makefile
+++ b/SimKer/Makefile
@@ -9,7 +9,7 @@ OPT= -O3
 #OPENCL_INC= /home/daroczyb/NVIDIA_GPU_Computing_SDK/OpenCL/common/inc/
 OPENCL = /opt/AMDAPP/lib/x86_64/ -l OpenCL
 OPENCL_INC= /opt/AMDAPP/include/
-#OPENCL_MAC= -framework OpenCL
+OPENCL_MAC= -framework OpenCL
 SDKINC = /home/daroczyb/NVIDIA_GPU_Computing_SDK/C/common/inc/
 SDKLIB = /home/daroczyb/NVIDIA_GPU_Computing_SDK/C/lib/
 SSEOPT= -msse3 -mfpmath=sse -funroll-loops
@@ -20,8 +20,8 @@ CFLAGS = $(OPT) $(SSEOPT)
 main: main.cpp OpenCL_env.o
 	g++ $(CFLAGS) main.cpp OpenCL_env.o -L$(OPENCL) -I$(OPENCL_INC) -o SimKerCL
 	
-mac: main.cpp OpenCL_mac.o climage.o
-	clang++ $(OPT) $(SSEOPT) $(OPENCL_MAC) main.cpp OpenCL_mac.o climage.o -o SimKerCL_mac
+mac: main.cpp OpenCL_mac.o
+	clang++ $(CFLAGS) $(OPENCL_MAC) main.cpp OpenCL_mac.o -o SimKerCL_mac
 
 climage.o: image_core/climage.h image_core/climage.cpp
 	g++ $(CFLAGS) `pkg-config --cflags opencv` image_core/climage.cpp `pkg-config --libs opencv` -c
